--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@
   align-items: center;
   font-size: 20px;
   font-weight: 700;
+  cursor: pointer;
+}
+
+.friends__list {
+  height: 100%;
+}
+
+.btn {
+  cursor: pointer;
 }
 
 .friends .friend__arrow .btn:before {
